--- a/front-end-aprendeLibre/src/app/authentication/login/login.component.html
+++ b/front-end-aprendeLibre/src/app/authentication/login/login.component.html
@@ -1,15 +1,32 @@
-<div class="login-register" style="background-image:url(assets/images/background/login-register.jpg);">
+<div
+  class="login-register"
+  style="background-image: url(assets/resources/background/login-register.jpg)"
+>
   <div class="login-box card">
     <div class="card-body">
       <div class="form-horizontal form-material" id="loginform">
         <h3 class="box-title m-b-20">Login</h3>
-        <div class="form-group ">
+        <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="text" placeholder="Correo" id="email" [(ngModel)]="email"> </div>
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Correo"
+              id="email"
+              [(ngModel)]="email"
+            />
+          </div>
         </div>
         <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="password" placeholder="Contraseña" id="password" [(ngModel)]="password"> </div>
+            <input
+              class="form-control"
+              type="password"
+              placeholder="Contraseña"
+              id="password"
+              [(ngModel)]="password"
+            />
+          </div>
         </div>
         <!--<div class="form-group row">
           <div class="col-md-12 font-14">
@@ -21,16 +38,24 @@
         </div>-->
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12" (click)="login()">
-            <a class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light">Entrar</a>
+            <a
+              class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
+              >Entrar</a
+            >
           </div>
         </div>
-      
+
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
-            <div>¿No tienes una cuenta? <a class="text-info m-l-5" [routerLink]="['/signup']"><b>Regístrate</b></a></div>
+            <div>
+              ¿No tienes una cuenta?
+              <a class="text-info m-l-5" [routerLink]="['/signup']"
+                ><b>Regístrate</b></a
+              >
+            </div>
           </div>
         </div>
-      </div>      
+      </div>
     </div>
   </div>
 </div>
