ADD: New page and  deleting trash code

--- a/front-end-aprendeLibre/src/app/layouts/full/full.component.html
+++ b/front-end-aprendeLibre/src/app/layouts/full/full.component.html
@@ -37,12 +37,12 @@
             <img
               src="assets/resources/gcfglobal-color.png"
               alt="homepage"
-              class="dark-logo mb-1"
+              class="dark-logo mb-1 w-100"
             />
             <!-- Light Logo text -->
             <img
               src="assets/resources/gcfglobal-color.png"
-              class="light-logo mb-1"
+              class="light-logo mb-1 w-100"
               alt="homepage"
             />
           </span>
