--- a/front-end-aprendeLibre/src/app/dashboards/dashboard/dashboard.component.html
+++ b/front-end-aprendeLibre/src/app/dashboards/dashboard/dashboard.component.html
@@ -1,24 +1,269 @@
 <!-- ============================================================== -->
 <!-- Start Page Content -->
 <!-- ============================================================== -->
+<div class="row mb-2">
+  <div class="col-12">
+    <h1 class="text-center">Números en inglés</h1>
+  </div>
+</div>
+
+<!------------------FIRST PART------------------>
+
+
+<h2>Números cardinales en inglés</h2>
+<hr>
+<div class="row">
+  <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+    <video controls class="w-100">
+      <source src="assets/resources/f_3wseayndc.mp4" type="video/mp4" />
+    </video>
+  </div>
+
+  <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+        <p>Los números cardinales se usan para contar cosas o expresar cantidades y los puedes utilizar en cualquier
+          momento
+          o situación, por ejemplo:</p>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <em><strong>There are three (3) apples on the table.<br /></strong></em>Hay tres (3) manzanas sobre la
+            mesa.<br />
+          </li>
+          <li class="list-group-item">
+            <em><strong>I worked twenty (20) hours this week.<br /></strong></em>Yo trabajé veinte (20) horas esta
+            semana.<br />
+          </li>
+          <li class="list-group-item">
+            <em><strong>She has one (1) car.<br /></strong></em>Ella tiene un (1) carro.<br />
+          </li>
+          <li class="list-group-item">
+            <em><strong>He gave me fifty (50) dollars for my work.<br /></strong></em>Él me dió cincuenta (50) dólares.
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-12"><img class="w-100" src="assets/resources/cardinal-numbers.png"
+          alt="Ejemplo de números cardinales" />
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<!------------------FIRST PART------------------>
+
+<!------------------SECOND PART------------------>
+
+<h2 class="mt-2">Cómo se leen los números en inglés</h2>
+<hr>
+
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-12 order-3">
+    <p>
+      Como en español, las cifras numéricas en inglés pueden dividirse en
+      unidades, decenas, centenas, unidades de mil, decenas de mil, y así
+      continúas hasta llegar a un millón, un billón, etc., y de esto depende cómo
+      se leen los números en inglés.
+    </p>
+
+    <h2>Unidades</h2>
+    <hr>
+
+    <div class="row">
+      <div class="col-12">
+        <p>Los números del 0 al 9 tienen nombres específicos:</p>
+
+        <table class="table">
+          <tr class="text-center">
+            <td>0 = Zero</td>
+            <td>1 = One</td>
+          </tr>
+
+          <tr class="text-center">
+            <td>2 = Two</td>
+            <td>3 = Three </td>
+          </tr>
+
+          <tr class="text-center">
+            <td>4 = Four</td>
+            <td>5 = Five</td>
+          </tr>
+
+
+          <tr class="text-center">
+            <td>6 = Six </td>
+            <td>7 = Seven</td>
+          </tr>
+
+          <tr class="text-center">
+            <td>8 = Eight </td>
+            <td>9 = Nine </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-6 col-md-6 col-sm-12 col-12"> <img class="w-100" src="assets/resources/cifras_1.png"
+      alt="Imagen ejemplo de las cifras." />
+  </div>
+</div>
+<hr>
+
+<!------------------SECOND PART------------------>
+
+<!------------------THIRD PART------------------>
+<h2 class="mt-2">Número de dos cifras o decenas:</h2>
+<p>
+  Los números de dos cifras las dividiremos en dos grupos, verás que así te
+  los aprenderás mejor:
+</p>
+<hr>
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+    <h3>Del 10 al 19:</h3>
+    <p>
+      Aquí debes tener en cuenta que estas cifras se forman con base en las
+      unidades y se les añade el sufijo o terminación <em>"</em><em><strong>-teen</strong></em><em>"</em>, excepto por
+      las
+      números del 10 al 12.
+    </p>
+    <table class="table">
+      <tr class="text-center">
+        <td>10 = Ten</td>
+        <td>11 = Eleven</td>
+      </tr>
+
+      <tr class="text-center">
+        <td>12 = Twelve</td>
+        <td>13= Thirteen</td>
+      </tr>
+
+      <tr class="text-center">
+        <td>14 = Fourteen </td>
+        <td>15 = Fifteen</td>
+      </tr>
+
+
+      <tr class="text-center">
+        <td>16 = Sixteen</td>
+        <td>17 = Seventeen</td>
+      </tr>
+
+      <tr class="text-center">
+        <td>18 = Eighteen</td>
+        <td>19 = Nineteen </td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+    <h3>Decenas del 20 al 90:</h3>
+    <p>
+      Estas cifras se forman añadiendo <em>"</em><em><strong>-ty</strong></em><em>"</em> a la raíz del número, así:
+    </p>
+    <table class="table">
+      <tr class="text-center">
+        <td>20 = Twenty</td>
+        <td>30 = Thirty</td>
+      </tr>
+
+      <tr class="text-center">
+        <td>40 = Forty</td>
+        <td>50 = Fifty</td>
+      </tr>
+
+      <tr class="text-center">
+        <td>60 = Sixty </td>
+        <td>70 = Seventy</td>
+      </tr>
+
+
+      <tr class="text-center">
+        <td>80 = Eighty</td>
+        <td>90 = Ninety</td>
+      </tr>
+
+    </table>
+  </div>
+</div>
+
+
+<!------------------THIRD PART------------------>
+
+<!------------------FOURTH PART------------------>
 <div class="row">
   <div class="col-12">
-    <!-- You can find this in the dashboard-component -->
-    <app-project-counter [tasks]="tasks" *ngIf="tasks"></app-project-counter>
-  </div>
-</div>
-<!-- ============================================================== -->
-<!-- chart and stats -->
-<!-- ============================================================== -->
 
-<!-- ============================================================== -->
-<!-- Report and Comments -->
-<!-- ============================================================== -->
-<!-- Row -->
-<div class="row">
-  <div class="col-lg-12">
-    <!-- You can find this in the dashboard-component -->
-    <app-feeds [tasks]="tasksFilterd" *ngIf="tasksFilterd"></app-feeds>
+
+    <h2>Centenas o números de tres cifras:</h2>
+    <hr>
+    <p>
+      <em><strong>Hundred</strong></em> es la traducción de ciento y va después de
+      la cifra que cumple la función de centena en el número, por ejemplo:
+    </p>
+    <p>
+      255 =
+      <em><strong>Two <span style="text-decoration: underline">hundred</span> and
+          fifty-five</strong></em>.<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Doscientos
+      cincuenta y cinco.
+    </p>
+    <p>
+      Después de <em><strong>hundred</strong></em>, va un <em><strong>and </strong>(y)</em>. Para algunos manuales de
+      estilo
+      y en algunos contextos añadirle <em><strong>and</strong></em> a la cifra no
+      es necesario, pero nosotros te recomendamos que lo uses por cuestiones
+      gramaticales.
+    </p>
+    <p>
+      568 = Five <strong>hundred</strong>
+      <strong>and</strong> sixty-eight<br />324 = Three <strong>hundred</strong>
+      <strong>and</strong> twenty-four<br />913 = Nine
+      <strong>hundred and</strong> thirteen<br />786 = Seven
+      <strong>hundred and</strong> eighty-six<br />407 = Four
+      <strong>hundred and</strong> seven
+    </p>
+    <p>
+      Como ves en este último ejemplo, cuando en la función de decena está un cero
+      (0), simplemente se lee la unidad.
+    </p>
+    <h2>Mil:</h2>
+    <p>
+      La traducción de mil es <em><strong>thousand</strong></em>. Al igual que <em><strong>hundred</strong></em>, para
+      formar estas cifras debes agregar la palabra después del número que
+      vaya seguido por la coma (<strong>,</strong>). Por ejemplo:
+    </p>
+    <p>
+      5,973 =<em><strong>Five <span style="text-decoration: underline">thousand</span> nine
+          hundred and
+          seventy-three.<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </strong></em>Cinco mil novecientos setenta y tres.
+    </p>
+    <p>
+      Las unidades, decenas y centenas de mil se conforman de la misma manera que
+      en los casos anteriores y agregas
+      <em><strong>thousand </strong></em>al final de la cifra en posición de mil.
+      Por ejemplo:
+    </p>
+    <p>
+      1,372 = One <strong>thousand</strong> three hundred and seventy-two<br />62,450
+      = Sixty-two <strong>thousand</strong>&nbsp;four hundred and fifty<br />893,219
+      = Eight hundred and ninety-three <strong>thousand</strong> two hundred and
+      nineteen
+    </p>
+    <h2>Millón:</h2>
+    <p>
+      La traducción de millón es <em><strong>million</strong></em> y va justo
+      después de la cifra seguida por la marca de un millón, así:
+    </p>
+    <p>
+      1,287,790 = One <strong>million</strong> two hundred and eighty-seven
+      thousand seven hundred and ninety.<br />5,439,561 = Five
+      <strong>million</strong> four hundred and thirty-nine thousand five hundred
+      and sixty-one.
+    </p>
+    <p>Ten en cuenta que en inglés se usan comas para marcar mil o millón.</p>
   </div>
- 
 </div>
+<!------------------FOURTH PART------------------>
