--- a/front-end-aprendeLibre/src/app/list-courses/dashboard/dashboard.component.css
+++ b/front-end-aprendeLibre/src/app/list-courses/dashboard/dashboard.component.css
@@ -1,12 +1,17 @@
-.ct-series-c .ct-slice-donut {
-  stroke: rgb(236, 239, 241);
+
+
+@media (max-width: 800px) {
+  .row-not-essential
+  {
+    display: none;
+  }
+
 }
-.ct-series-d .ct-slice-donut {
-  stroke: rgb(116, 90, 242);
+
+@media (max-width: 550px) {
+  .row-not-essential-sm  {
+    display: none;
+  }
+
 }
-.ct-series-b .ct-slice-donut {
-  stroke: rgb(38, 198, 218);
-}
-.ct-series-a .ct-slice-donut {
-  stroke: rgb(30, 136, 229);
-}
+
